Remove Peer5 stuff for improved performance (peer5 doesn't seem to work on Github Pages)

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <h1 class="cover-heading">RASTI - COMPLEX</h1>
                         <p class="lead">Meine EP "Complex" ist nun verfügbar! </p>
                         <!-- <p class="lead">BALD VERFÜGBAR - 10 JUNI 2016 20:00</p> -->
-                        <p class="lead"><a peer5-download href="dl/Rasti-Complex-EP.zip" class="btn btn-lg btn-default">Download</a><br></p>
+                        <p class="lead"><a href="dl/Rasti-Complex-EP.zip" class="btn btn-lg btn-default">Download</a><br></p>
                     </div>
                     <div class="inner cover">
                         <img src="image/complex/cover400.png" width="300" />
@@ -54,7 +54,9 @@
         <script src="assets/js/jquery.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js" class=""></script>
         <script src="assets/js/ie10-viewport-bug-workaround.js"></script>
+<!--
         <script src="//api.peer5.com/peer5.js?id=z142i5n5qypq4cxr"></script>
+-->
         <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
